Sat Aug 18 15:57:46 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* //Makefile.am : fixed a number of small problems with
	  Makefiles spotted by Albert Chin

Thu Aug 16 14:37:55 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* win32/dsp/libxslt.def: minimal changes to compile 1.0.2 on
	  Windows/MSC

Thu Aug 16 12:58:11 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c: fixed a permutation of args to
	  xsltPrintErrorContext()

Wed Aug 15 15:19:14 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* Makefile.am config.h.in configure.in libxslt/xsltwin32config.h:
	  release of 1.0.2
	* tests/docs/Makefile.am libexslt/Makefile.am
	  tests/documents/Makefile.am tests/general/Makefile.am
	  xsltproc/Makefile.am: cleaning of Makefiles pointed out
	  by make distcheck

Wed Aug 15 13:54:41 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.h libxslt/transform.c: a bit of cleanup

Wed Aug 15 12:06:43 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libexslt/common.c libexslt/math.c libxslt/Makefile.am
	  libxslt/libxslt.h libxslt/xsltconfig.h.in: cleanup of includes
	  export xsltconfig.h at make install stage

Tue Aug 14 20:51:09 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/xslt.html updated xsltproc description with the many new
	  command line options Daniel has added, cleaned up some spelling

Tue Aug 14 18:41:02 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c libxslt/keys.c libxslt/templates.c 
	  libxslt/transform.c libxslt/variables.c libxslt/xsltutils.c:
	  serious changes on Result Value Trees and NodeSets
	  w.r.t. deallocation and collect operations. Probably not
	  100% clean (merge of allocated trees smells like a problem).
	  Seems sufficient to close #58943 . Also check if XPath evaluations
	  failed, and in this case stops the processing and avoid
	  going further, goal is to not segfault on broken XSLT.

Tue Aug 14 15:32:08 CEST 2001 Daniel Veillard <daniel@veillard.com>
