@@ -1,3 +1,8 @@
+Tue Aug 21 11:18:45 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>
+
+	* libxslt/numbers.c libexslt/math.c: Re-worked NaN and Inf
+	  support.
+
 Sat Aug 18 15:57:46 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* //Makefile.am : fixed a number of small problems with
